# hicmapp

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  config.sh  hicmappConfig.cmake.in
cmake/: FindLAPACK.cmake  FindSTARPU.cmake  FindSTARSH.cmake  ImportLAPACKE.cmake  ImportSTARPU.cmake  ImportSTARSH.cmake
cmake/macros/: BuildDependency.cmake  BuildSTARPU.cmake
docs/: config.in  index.md
examples/: CMakeLists.txt  compressed_data_generation.cpp  data_generation.cpp  dgemm_example.cpp  main.cpp  mpi_example.cpp  mpi_generation_gemm_example.cpp  par_fixed_rank_main.cpp  potrf_example.cpp  simple_example.cpp
include/hicmapp/api/: Hicmapp.hpp
include/hicmapp/common/: definitions.h
include/hicmapp/matrix-operations/interface/: MatrixOperations.hpp
include/hicmapp/primitives/: ProblemManager.hpp  matrix.hpp  submatrix.hpp
include/hicmapp/primitives/decomposer/: matrix_decomposer.hpp
include/hicmapp/primitives/decomposer/concrete/: slowest_dimension_decomposer.hpp  two_dimension_cyclic_decomposer.hpp
include/hicmapp/problem-manager/: StarshManager.hpp
include/hicmapp/runtime/communicator/mpi/: Communicator.hpp
include/hicmapp/runtime/communicator/serial/: Communicator.hpp
include/hicmapp/runtime/concrete/default/: default_runtime.hpp
include/hicmapp/runtime/concrete/starpu/: factory.hpp  hicma_runtime_workspace.hpp  hicma_starpu.hpp  starpu.hpp
include/hicmapp/runtime/concrete/starpu/starpu-codelets/: gemm-codelet.hpp  generate-dgytlr-codelet.hpp  generate-dgytlr-diag-codelet.hpp  generate_codelet.hpp  generate_compressed_data_codelet.hpp  lacpy-codelet.hpp  potrf-codelet.hpp  syrk-codelet.hpp  trsm-codelet.hpp  uncompress-codelet.hpp
include/hicmapp/runtime/interface/: HicmaCommunicator.hpp  HicmaContext.hpp  HicmaHardware.hpp  RunTimeFactory.hpp  RunTimeInterface.hpp  RunTimeSingleton.hpp  StarpuCodelet.hpp
include/hicmapp/tile-operations/: TileOperations.hpp
include/hicmapp/utils/: MatrixHelpers.hpp
scripts/: benchmark_script.sh  multithreading_benchmark_script.sh
src/: CMakeLists.txt
src/api/: CMakeLists.txt  Hicmapp.cpp
src/matrix-operations/: CMakeLists.txt
src/matrix-operations/omp/: CMakeLists.txt  MatrixOperations.cpp
src/primitives/: CMakeLists.txt  ProblemManager.cpp  matrix.cpp  submatrix.cpp
src/primitives/decomposer/: CMakeLists.txt  slowest_dimension_decomposer.cpp  two_dimension_cyclic_decomposer.cpp
src/problem-manager/: CMakeLists.txt  StarshManager.cpp
src/runtime/: CMakeLists.txt  HicmaContext.cpp  RunTimeSingleton.cpp
src/runtime/default/: CMakeLists.txt  default_runtime.cpp
src/runtime/starpu/: CMakeLists.txt  factory.cpp  starpu.cpp
src/runtime/starpu/starpu-codelets/: CMakeLists.txt  GenerateCompressedDataCodelet.cpp  gemm-codelet.cpp  generate-codelet.cpp  generate-dgytlr-codelet.cpp  generate-dgytlr-diag-codelet.cpp  lacpy-codelet.cpp  potrf-codelet.cpp  syrk-codelet.cpp  trsm-codelet.cpp  uncompress-codelet.cpp
src/tile-operations/: CMakeLists.txt  TileOperations.cpp
src/utils/: MatrixHelpers.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/primitives/: CMakeLists.txt  TestDecomposer.cpp  TestMatrix.cpp  TestSubMatrix.cpp
