add_executable(simple_example ${CMAKE_CURRENT_SOURCE_DIR}/simple_example.cpp)
add_executable(hicmapp_par_fixed_rank ${CMAKE_CURRENT_SOURCE_DIR}/par_fixed_rank_main.cpp)
add_executable(example main.cpp)
add_executable(compressed_data_generation ${CMAKE_CURRENT_SOURCE_DIR}/compressed_data_generation.cpp)
add_executable(dgemm_example ${CMAKE_CURRENT_SOURCE_DIR}/dgemm_example.cpp)
add_executable(data_generation ${CMAKE_CURRENT_SOURCE_DIR}/data_generation.cpp)
add_executable(potrf_example ${CMAKE_CURRENT_SOURCE_DIR}/potrf_example.cpp)
add_executable(mpi_generation_gemm_example ${CMAKE_CURRENT_SOURCE_DIR}/mpi_generation_gemm_example.cpp)
add_executable(mpi_example ${CMAKE_CURRENT_SOURCE_DIR}/mpi_example.cpp)


if (HICMAPP_USE_MPI)
    target_link_libraries(simple_example ${PROJECT_NAME} MPI::MPI_CXX)
    target_link_libraries(hicmapp_par_fixed_rank ${PROJECT_NAME} MPI::MPI_CXX)
    target_link_libraries(example ${PROJECT_NAME} MPI::MPI_CXX)
    if(NOT USE_CUDA)
        target_link_libraries(mpi_example ${PROJECT_NAME} MPI::MPI_CXX)
        target_link_libraries(mpi_generation_gemm_example ${PROJECT_NAME} MPI::MPI_CXX)
        target_link_libraries(potrf_example ${PROJECT_NAME} MPI::MPI_CXX)
    endif()
    target_link_libraries(data_generation ${PROJECT_NAME} MPI::MPI_CXX)
    target_link_libraries(dgemm_example ${PROJECT_NAME} MPI::MPI_CXX)
    target_link_libraries(compressed_data_generation ${PROJECT_NAME} MPI::MPI_CXX)
else ()
    target_link_libraries(simple_example ${PROJECT_NAME})
    target_link_libraries(hicmapp_par_fixed_rank ${PROJECT_NAME})
    target_link_libraries(example ${PROJECT_NAME})
    target_link_libraries(data_generation ${PROJECT_NAME})
    target_link_libraries(dgemm_example ${PROJECT_NAME})
    target_link_libraries(compressed_data_generation ${PROJECT_NAME})
    target_link_libraries(potrf_example ${PROJECT_NAME})
    target_link_libraries(mpi_generation_gemm_example ${PROJECT_NAME})
    target_link_libraries(mpi_example ${PROJECT_NAME})
endif ()